pam-krb5-migrate (0.0.10-2) UNRELEASED; urgency=low

  * Bump standards version to 3.9.3.

 -- Jelmer Vernooij <jelmer@debian.org>  Wed, 29 Feb 2012 13:48:43 +0100

pam-krb5-migrate (0.0.10-1) unstable; urgency=low

  * New upstream snapshot.
   + Fixes compatibility with newer versions of Heimdal. LP: #832901 
  * Bump standards version to 3.9.2 (no changes).
  * Allow building against heimdal-multidev (which allows parallel
    installation of krb5-multidev) as alternative to heimdal-dev.

 -- Jelmer Vernooij <jelmer@debian.org>  Thu, 15 Sep 2011 18:08:21 +0200

pam-krb5-migrate (0.0.9-1) unstable; urgency=low

  * Change section to admin.
  * New upstream release.
   + Includes proper configure file. (Closes: #539203)

 -- Jelmer Vernooij <jelmer@debian.org>  Thu, 30 Jul 2009 12:02:28 +0200

pam-krb5-migrate (0.0.8+bzr39-1) unstable; urgency=low

  * Bump standards version to 3.8.2.
  * New upstream snapshot.
  * Install pam-auth-update profile.

 -- Jelmer Vernooij <jelmer@debian.org>  Wed, 29 Jul 2009 19:26:18 +0200

pam-krb5-migrate (0.0.8-2) unstable; urgency=low

  * Use gcc rather than ld for linking. (Closes: #495167)

 -- Jelmer Vernooij <jelmer@samba.org>  Thu, 21 Aug 2008 17:04:17 +0200

pam-krb5-migrate (0.0.8-1) unstable; urgency=low

  * New upstream release.
    + Fixes compatibility with newer Heimdal versions. (Closes: #445579)
  * Link with -z defs to force build failure in the future when there are
  missing symbols.
  * Allow Debian Maintainer uploads.

 -- Jelmer Vernooij <jelmer@samba.org>  Mon, 10 Dec 2007 20:59:40 +0100

pam-krb5-migrate (0.0.7-1) unstable; urgency=low

  * Include syslog.h. (Closes: #441683)
  * Fix building twice in a row. (Closes: #424346)

 -- Jelmer Vernooij <jelmer@samba.org>  Thu, 13 Sep 2007 18:29:08 +0200

pam-krb5-migrate (0.0.6-1) unstable; urgency=low

  * New upstream release.

 -- Jelmer Vernooij <jelmer@samba.org>  Fri, 27 Apr 2007 22:15:01 +0200

pam-krb5-migrate (0.0.5-1) unstable; urgency=low
