@@ -1,0 +1,2 @@
+lib/security
+usr/share/pam-configs
