@@ -1,8 +1,9 @@
 pam-krb5-migrate (0.0.10-2) UNRELEASED; urgency=low
 
   * Bump standards version to 3.9.3.
+  * Use debhelper 7.
 
- -- Jelmer Vernooij <jelmer@debian.org>  Wed, 29 Feb 2012 13:48:43 +0100
+ -- Jelmer Vernooij <jelmer@debian.org>  Wed, 29 Feb 2012 13:51:20 +0100
 
 pam-krb5-migrate (0.0.10-1) unstable; urgency=low
 
